Backend productos, Front notificaciones
