# BACKEND/DawaProject/ws_ceragen/static/swagger.json
@@ -2829,8 +2829,7 @@
         }
       }
     },
-
-    "/admin/product/delete/{id}": {
+    "/admin/product/delete/{pro_id}": {
       "delete": {
         "tags": ["WS Admin"],
         "summary": "Eliminar un Producto",
@@ -2845,12 +2844,156 @@
             "type": "string"
           },
           {
+            "name": "pro_id",
+            "in": "path",
+            "description": "ID del Producto a eliminar",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "user_process",
+            "in": "path",
+            "description": "Usuario del proceso",
+            "required": true,
+            "type": "string"
+          }
+        ],
+
+        "responses": {
+          "200": {
+            "description": "Producto eliminado exitosamente",
+            "schema": {
+              "$ref": "#/definitions/Response"
+            }
+          },
+          "400": {
+            "description": "Datos inválidos o faltantes",
+            "schema": {
+              "$ref": "#/definitions/NotFound"
+            }
+          },
+          "500": {
+            "description": "Error al eliminar el producto",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          }
+        }
+      }
+    },
+
+    "/admin/promotion/list": {
+      "get": {
+        "tags": [
+          "WS Admin"
+        ],
+        "summary": "Lista de promociones",
+        "description": "Obtiene una lista de todos las promociones",
+        "operationId": "ListAllPromotions",
+        "produces": [
+          "application/json"
+        ],
+
+        "parameters": [
+          {
+            "in": "header",
+            "name": "tokenapp",
+            "description": "Token para aplicación",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Operación exitosa",
+            "schema": {
+              "$ref": "#/definitions/Response"
+            }
+          },
+          "500": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          },
+          "400": {
+            "description": "Not Found",
+            "schema": {
+              "$ref": "#/definitions/NotFound"
+            }
+          }
+        }
+      }
+    },
+    "/admin/promotion/insert": {
+      "post": {
+        "tags": ["WS Admin"],
+        "summary": "Crear una promocion",
+        "description": "Crear una promocion para un producto",
+        "operationId": "CreatePromotion",
+        "parameters": [
+           {
+            "in": "header",
+            "name": "tokenapp",
+            "description": "Token para aplicación",
+            "required": true,
+            "type": "string"
+          },
+          {
             "in": "body",
-            "name": "AdminProductUpdate",
-            "description": "Datos para eliminar un producto",
+            "name": "AdminProductCreate",
+            "description": "Datos para crear un producto",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/AdminProductDelete"
+              "$ref": "#/definitions/AdminPromotionCreate"
+            }
+          }
+        ],
+
+        "responses": {
+          "200": {
+            "description": "Producto agregado exitosamente",
+            "schema": {
+              "$ref": "#/definitions/Response"
+            }
+          },
+          "400": {
+            "description": "Datos inválidos o faltantes",
+            "schema": {
+              "$ref": "#/definitions/NotFound"
+            }
+          },
+          "500": {
+            "description": "Error al agregar el producto",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          }
+        }
+      }
+    },
+    "/admin/promotion/update": {
+      "patch": {
+        "tags": ["WS Admin"],
+        "summary": "Actualizar una promocion",
+        "description": "Actualizar una promocion específico",
+        "operationId": "UpdatePromotion",
+        "parameters": [
+           {
+            "in": "header",
+            "name": "tokenapp",
+            "description": "Token para aplicación",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "AdminPromotionUpdate",
+            "description": "Datos para actualizar una promocion",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AdminPromotionUpdate"
             }
           }
         ],
@@ -2877,7 +3020,6 @@
         }
       }
     }
-
   },
   "definitions": {
     "AdminProductInsert": {
@@ -2970,27 +3112,50 @@
           "type": "integer",
           "description": "ID del tipo de terapia"
         },
-        "user_created": {
+        "user_process": {
           "type": "string",
           "description": "Usuario que crea el producto"
         }
       },
       "required": [
         "pro_id",
-        "pro_code",
-        "pro_name",
-        "pro_price",
-        "pro_total_sessions",
-        "pro_therapy_type_id",
-        "user_created"
+        "user_process"
       ]
     },
-    "AdminProductDelete": {
+
+
+    "AdminPromotionCreate": {
       "type": "object",
       "properties": {
-        "pro_id": {
+        "ppr_product_id": {
           "type": "integer",
-          "description": "ID del producto"
+          "description": "ID de la promocion"
+        },
+        "ppr_name": {
+          "type": "string",
+          "description": "Nombre de la promocion"
+        },
+        "ppr_description": {
+          "type": "string",
+          "description": "Descripción de la promocion"
+        },
+        "ppr_discount_percent": {
+          "type": "integer",
+          "description": "Precio del producto"
+        },
+        "ppr_extra_sessions": {
+          "type": "integer",
+          "description": "Cantidad de sesiones extras"
+        },
+        "ppr_start_date": {
+          "type": "string",
+          "format": "date",
+          "description": "Fecha de inicio de la promoción (YYYY-MM-DD)"
+        },
+        "ppr_end_date": {
+          "type": "string",
+          "format": "date",
+          "description": "Fecha de fin de la promoción (YYYY-MM-DD)"
         },
         "user_created": {
           "type": "string",
@@ -2998,8 +3163,55 @@
         }
       },
       "required": [
-        "pro_id",
+        "ppr_id",
         "user_created"
+      ]
+    },
+    "AdminPromotionUpdate": {
+      "type": "object",
+      "properties": {
+        "ppr_id": {
+          "type": "integer",
+          "description": "ID de la promocion"
+        },
+        "ppr_product_id": {
+          "type": "integer",
+          "description": "ID del producto asociado"
+        },
+        "ppr_name": {
+          "type": "string",
+          "description": "Nombre de la promocion"
+        },
+        "ppr_description": {
+          "type": "string",
+          "description": "Descripción de la promocion"
+        },
+        "ppr_discount_percent": {
+          "type": "integer",
+          "description": "Precio del producto"
+        },
+        "ppr_extra_sessions": {
+          "type": "integer",
+          "description": "Cantidad de sesiones extras"
+        },
+        "ppr_start_date": {
+          "type": "string",
+          "format": "date",
+          "description": "Fecha de inicio de la promoción (YYYY-MM-DD)"
+        },
+        "ppr_end_date": {
+          "type": "string",
+          "format": "date",
+          "description": "Fecha de fin de la promoción (YYYY-MM-DD)"
+        },
+        "user_process": {
+          "type": "string",
+          "description": "Usuario que crea el producto"
+        }
+      },
+      "required": [
+        "ppr_id",
+        "user_process"
       ]
     },
 
